--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,41 +1,50 @@
-/* Footer.css */
-
 .footer {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
+  text-align: center;
+}
+
+.footer h1 {
+  color: white;
+  padding: 10px;
+  font-family: 'Carattere', cursive;
+  margin-top: 2rem;
+}
+
+.footer .contact {
+  color: var(--secondary-color);
+}
+
+.icons {
+  margin-top: 10px;
+  padding-bottom: 20px; /* Adjust as needed for spacing */
+}
+
+.icons a {
+  margin-right: 10px; /* Adjust as needed for spacing between icons */
+  color: var(--secondary-color);
+  text-decoration: none;
+  color: white;
+  font-size: 1.5rem;
+  padding: 10px;
+}
+
+.icons a:hover {
+  
+  color: var(--secondary-color);
+  
+}
+
+/* Media query for mobile devices */
+@media screen and (max-width: 768px) {
+  .footer h1 {
+    font-size: 16px; /* Adjust the font size as needed */
   }
-  
-  .footer-container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+  .icons {
+    margin-top: 10px;
   }
-  
-  .logo {
-    width: 50px; /* Adjust the size as needed */
+
+  .icons a {
+    margin: 0 10px 10px 0; /* Adjust as needed for spacing on mobile */
+    display: block;
   }
-  
-  .social-links a {
-    color: #fff;
-    text-decoration: none;
-    margin-left: 20px;
-  }
-  
-  /* Media Queries for responsiveness */
-  
-  @media (max-width: 600px) {
-    .footer-container {
-      flex-direction: column;
-      text-align: center;
-    }
-  
-    .social-links {
-      margin-top: 10px;
-    }
-  
-    .social-links a {
-      margin: 5px;
-    }
-  }
-  
+}
